--- a/index.html
+++ b/index.html
@@ -549,4 +549,45 @@
           </div>
         </section>
 
-        <!-- FIT / NOT FIT -
+        <!-- FIT / NOT FIT -->
+        <section class="section-shell alt">
+          <div class="section-grid">
+            <div>
+              <h2 class="section-title">FIT / NOT FIT</h2>
+            </div>
+            <div>
+              <div class="fit-block">
+                <p class="fit-label">A good fit:</p>
+                <p class="fit-body">
+                  You have an active business and the core operations are established, but Shopify, bookkeeping,
+                  and daily workflows need to be aligned so everything reflects the same reality. You want clear,
+                  consistent operations supported by someone who understands the details without adding complexity.
+                </p>
+              </div>
+
+              <div class="fit-block">
+                <p class="fit-label">Not a fit:</p>
+                <p class="fit-body">
+                  This isn’t the right match if you need a custom Shopify theme built from the ground up, if the
+                  business requires urgent intervention, or if you’re looking for a full team or agency structure.
+                  My work is steady, detailed operational support — not surface-level shortcuts or full-scale rebuilds.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+
+    <footer class="site-footer">
+      <div class="site-footer-inner">
+        © <span id="year"></span> Suzi Neves
+      </div>
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
