--- a/index.html
+++ b/index.html
@@ -124,20 +124,43 @@
       }
     }
 
-    /* Hero */
+    /* HERO – controlled wildfire */
 
     .hero-shell {
       margin-top: 36px;
-      padding: 40px 0 52px;
+      padding: 44px 0 56px;
       border-bottom: 1px solid var(--border-subtle);
       position: relative;
       overflow: visible;
     }
 
+    /* subtle background flare on the right */
+    .hero-shell::after {
+      content: "";
+      position: absolute;
+      right: -15%;
+      top: -10%;
+      width: 45%;
+      height: 120%;
+      background:
+        radial-gradient(circle at 10% 0,
+          rgba(199, 108, 118, 0.25),
+          transparent 60%)
+        ,
+        linear-gradient(
+          180deg,
+          rgba(33, 25, 21, 0.16),
+          rgba(33, 25, 21, 0.04)
+        );
+      opacity: 0.9;
+      filter: blur(0.2px);
+      pointer-events: none;
+    }
+
     @media (min-width: 900px) {
       .hero-shell {
-        margin-top: 48px;
-        padding: 52px 0 60px;
+        margin-top: 52px;
+        padding: 56px 0 64px;
       }
     }
 
@@ -145,25 +168,27 @@
       display: flex;
       flex-direction: column;
       gap: 24px;
+      position: relative;
+      z-index: 1;
     }
 
     @media (min-width: 900px) {
       .hero {
         display: grid;
-        grid-template-columns: minmax(0, 1.3fr) minmax(0, 1.05fr);
+        grid-template-columns: minmax(0, 1.4fr) minmax(0, 0.8fr);
         column-gap: 72px;
-        align-items: stretch;
+        align-items: flex-start;
       }
     }
 
     .hero-main {
       position: relative;
-      padding-left: 10px;
+      padding-left: 12px;
     }
 
     @media (min-width: 900px) {
       .hero-main {
-        padding-left: 16px;
+        padding-left: 18px;
       }
     }
 
@@ -171,27 +196,30 @@
       content: "";
       position: absolute;
       left: -10px;
-      top: 8px;
+      top: 10px;
       width: 2px;
-      height: 80px;
+      height: 86px;
       background: var(--accent);
     }
 
     .hero-title {
-      font-size: 2rem;
-      line-height: 1.2;
+      font-size: 2.05rem;
+      line-height: 1.18;
       font-weight: 600;
       margin: 0 0 18px;
-      max-width: 30rem;
+      max-width: 32rem;
     }
 
     @media (min-width: 900px) {
       .hero-title {
-        font-size: 2.35rem;
+        font-size: 2.45rem;
       }
     }
 
-    /* highlight only the second line of the title */
+    .hero-title-line {
+      display: block;
+    }
+
     .hero-title-accent {
       position: relative;
       display: inline-block;
@@ -201,15 +229,15 @@
     .hero-title-accent::before {
       content: "";
       position: absolute;
-      inset: 55% -0.1em -0.1em;
-      background: rgba(199, 108, 118, 0.26);
-      z-index: -1;
+      inset: 60% -0.08em -0.08em;
+      background: rgba(199, 108, 118, 0.32);
       border-radius: 6px;
+      z-index: -1;
     }
 
     .hero-subtext {
-      font-size: 0.97rem;
-      line-height: 1.6;
+      font-size: 0.98rem;
+      line-height: 1.65;
       margin: 0 0 2px;
       max-width: 32rem;
       color: #3b2e26;
@@ -220,7 +248,7 @@
     }
 
     .hero-actions {
-      margin-top: 22px;
+      margin-top: 24px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -239,9 +267,9 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      padding: 8px 18px;
+      padding: 8px 20px;
       border-radius: 999px;
-      border: 1px solid rgba(199, 108, 118, 0.7);
+      border: 1px solid rgba(199, 108, 118, 0.75);
       background: var(--accent);
       font: inherit;
       cursor: pointer;
@@ -266,55 +294,39 @@
       max-width: 18rem;
     }
 
-    /* Right-hand hero panel */
+    /* right side = pure atmosphere, no box */
 
-    .hero-panel {
-      position: relative;
-      border-radius: 26px;
-      padding: 22px 22px 24px;
-      background: radial-gradient(
-          circle at 0 0,
-          rgba(231, 195, 200, 0.22),
-          transparent 65%
-        ),
-        linear-gradient(
-          145deg,
-          #211814,
-          #33221b
-        );
-      color: #f9f4ee;
-      overflow: hidden;
-      box-shadow: 0 28px 64px rgba(18, 10, 6, 0.5);
+    .hero-art {
+      display: none;
     }
 
     @media (min-width: 900px) {
-      .hero-panel {
-        margin-top: 8px;
-        margin-right: -32px; /* bleed to edge for tension */
+      .hero-art {
+        display: block;
+        position: relative;
+        min-height: 210px;
       }
-    }
 
-    /* simplified texture, no weird side blob */
-    .hero-panel-inner {
-      position: relative;
-      z-index: 1;
-    }
-
-    .hero-side-label {
-      font-size: 0.78rem;
-      letter-spacing: 0.18em;
-      text-transform: uppercase;
-      color: var(--accent-soft);
-      margin-bottom: 10px;
-    }
-
-    .hero-side-block {
-      padding: 12px 0 0;
-      border-top: 1px solid rgba(243, 230, 224, 0.42);
-      font-size: 0.94rem;
-      line-height: 1.75;
-      max-width: 22rem;
-      color: #fdf7f1;
+      .hero-art::before {
+        content: "";
+        position: absolute;
+        right: 8%;
+        top: 12%;
+        width: 70%;
+        height: 65%;
+        background:
+          radial-gradient(circle at 0 0,
+            rgba(255, 255, 255, 0.16),
+            transparent 60%)
+          ,
+          radial-gradient(circle at 100% 100%,
+            rgba(199, 108, 118, 0.35),
+            transparent 65%);
+        opacity: 0.95;
+        mix-blend-mode: multiply;
+        filter: blur(0.3px);
+        border-radius: 32px;
+      }
     }
 
     /* Sections */
@@ -443,8 +455,12 @@
           <div class="hero">
             <div class="hero-main">
               <h1 class="hero-title">
-                Making sense of how your business operates and
-                <span class="hero-title-accent">creating systems that support your work.</span>
+                <span class="hero-title-line">
+                  Making sense of how your business operates
+                </span>
+                <span class="hero-title-line hero-title-accent">
+                  and creating systems that support your work.
+                </span>
               </h1>
 
               <p class="hero-subtext">
@@ -467,16 +483,8 @@
               </div>
             </div>
 
-            <aside class="hero-panel">
-              <div class="hero-panel-inner">
-                <div class="hero-side-label">For when “it shouldn’t be this hard”</div>
-                <div class="hero-side-block">
-                  The moment you realize you’re spending too much energy chasing down
-                  mismatched numbers, fixing the same issues, or carrying details that
-                  should live in a system — that’s usually when people email me.
-                </div>
-              </div>
-            </aside>
+            <!-- right side: atmosphere only, no box -->
+            <div class="hero-art" aria-hidden="true"></div>
           </div>
         </section>
 
