--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
 
   <style>
     :root {
-      --bg: #f5f1ea;
-      --bg-alt: #eee5da;
-      --text: #211915;
-      --muted: #746557;
-      --accent: #c76c76; /* soft dusty pink */
-      --accent-soft: #e3c3c8;
-      --border-subtle: rgba(40, 28, 20, 0.18);
+      /* Less beige, more grounded greige */
+      --bg: #f2f0eb;
+      --bg-alt: #e4ded4;
+
+      /* Deep neutral, not chocolate, not black */
+      --text: #1f1a17;
+      --muted: #6b6158;
+
+      /* Burnt amber / rust accent instead of pink */
+      --accent: #c87339;        /* rich clay/amber */
+      --accent-soft: #f0c49a;   /* soft, warm highlight */
+
+      --border-subtle: rgba(34, 25, 19, 0.18);
       --max-width: 1040px;
     }
 
@@ -110,15 +116,15 @@
       width: 100vw;
       background:
         radial-gradient(circle at 10% 0,
-          rgba(199, 108, 118, 0.32),
+          rgba(200, 115, 57, 0.28),
           transparent 55%)
         ,
         linear-gradient(
           135deg,
-          #221816,
-          #342421
+          #1c1713,
+          #34251e
         );
-      opacity: 0.96;
+      opacity: 0.97;
       z-index: 0;
     }
 
@@ -132,14 +138,14 @@
       max-width: 44rem;
       margin: 0 auto;
       padding: 0 8px;
-      color: #fdf6ee;
+      color: #f8f2ea;
     }
 
     .hero-kicker {
       font-size: 0.78rem;
       letter-spacing: 0.22em;
       text-transform: uppercase;
-      color: rgba(231, 195, 200, 0.9);
+      color: rgba(240, 196, 154, 0.9);
       margin: 0 0 16px;
     }
 
@@ -171,7 +177,7 @@
       content: "";
       position: absolute;
       inset: 68% -0.16em -0.04em;
-      background: rgba(199, 108, 118, 0.45);
+      background: rgba(200, 115, 57, 0.6);
       border-radius: 8px;
       z-index: -1;
     }
@@ -180,7 +186,7 @@
       font-size: 0.98rem;
       line-height: 1.7;
       margin: 0;
-      color: rgba(251, 244, 236, 0.9);
+      color: rgba(250, 241, 231, 0.9);
     }
 
     .hero-subtext + .hero-subtext {
@@ -212,7 +218,7 @@
       letter-spacing: 0.2em;
       text-transform: uppercase;
       text-decoration: none;
-      color: #fdf6ee;
+      color: #f8f2ea;
       padding-bottom: 4px;
     }
 
@@ -223,7 +229,7 @@
       right: 0;
       bottom: 0;
       height: 1px;
-      background: rgba(231, 195, 200, 0.95);
+      background: rgba(240, 196, 154, 0.95);
     }
 
     .hero-link:hover,
@@ -234,7 +240,7 @@
 
     .hero-note {
       font-size: 0.86rem;
-      color: rgba(231, 195, 200, 0.9);
+      color: rgba(240, 196, 154, 0.9);
       max-width: 20rem;
       text-align: center;
     }
