--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
 
   <style>
     :root {
-      /* Less beige, more grounded greige */
-      --bg: #f2f0eb;
-      --bg-alt: #e4ded4;
+      /* Neutral, not beige */
+      --bg: #f4f4f3;
+      --bg-alt: #ffffff;
 
-      /* Deep neutral, not chocolate, not black */
-      --text: #1f1a17;
-      --muted: #6b6158;
+      --text: #111111;
+      --muted: #5d5d5d;
 
-      /* Burnt amber / rust accent instead of pink */
-      --accent: #c87339;        /* rich clay/amber */
-      --accent-soft: #f0c49a;   /* soft, warm highlight */
+      /* Black + Ember palette */
+      --accent: #e4572e;        /* ember */
+      --accent-soft: #f29b7a;   /* softer ember highlight */
 
-      --border-subtle: rgba(34, 25, 19, 0.18);
+      --border-subtle: rgba(0, 0, 0, 0.12);
       --max-width: 1040px;
     }
 
@@ -88,7 +87,7 @@
       color: var(--muted);
     }
 
-    /* HERO – cinematic band */
+    /* HERO – Black + Ember cinematic band */
 
     .hero-shell {
       position: relative;
@@ -105,7 +104,7 @@
       }
     }
 
-    /* full-width textured band behind hero */
+    /* full-width dark band */
     .hero-shell::before {
       content: "";
       position: absolute;
@@ -115,16 +114,16 @@
       transform: translateX(-50%);
       width: 100vw;
       background:
-        radial-gradient(circle at 10% 0,
-          rgba(200, 115, 57, 0.28),
+        radial-gradient(circle at 12% 0,
+          rgba(228, 87, 46, 0.4),
           transparent 55%)
         ,
         linear-gradient(
           135deg,
-          #1c1713,
-          #34251e
+          #050608,
+          #111319
         );
-      opacity: 0.97;
+      opacity: 1;
       z-index: 0;
     }
 
@@ -138,19 +137,19 @@
       max-width: 44rem;
       margin: 0 auto;
       padding: 0 8px;
-      color: #f8f2ea;
+      color: #f8f8f8;
     }
 
     .hero-kicker {
       font-size: 0.78rem;
       letter-spacing: 0.22em;
       text-transform: uppercase;
-      color: rgba(240, 196, 154, 0.9);
+      color: rgba(242, 155, 122, 0.95);
       margin: 0 0 16px;
     }
 
     .hero-title {
-      font-size: 2.1rem;
+      font-size: 2.15rem;
       line-height: 1.18;
       font-weight: 600;
       margin: 0 0 22px;
@@ -158,7 +157,7 @@
 
     @media (min-width: 900px) {
       .hero-title {
-        font-size: 2.6rem;
+        font-size: 2.7rem;
       }
     }
 
@@ -172,13 +171,18 @@
       padding: 0 0.08em;
     }
 
-    /* subtle “cinematic” underline / band under second line */
+    /* ember band under second line */
     .hero-title-em::before {
       content: "";
       position: absolute;
       inset: 68% -0.16em -0.04em;
-      background: rgba(200, 115, 57, 0.6);
-      border-radius: 8px;
+      background: linear-gradient(
+        90deg,
+        rgba(228, 87, 46, 0.2),
+        rgba(228, 87, 46, 0.75),
+        rgba(242, 155, 122, 0.4)
+      );
+      border-radius: 999px;
       z-index: -1;
     }
 
@@ -186,7 +190,7 @@
       font-size: 0.98rem;
       line-height: 1.7;
       margin: 0;
-      color: rgba(250, 241, 231, 0.9);
+      color: rgba(245, 245, 245, 0.9);
     }
 
     .hero-subtext + .hero-subtext {
@@ -194,7 +198,7 @@
     }
 
     .hero-actions {
-      margin-top: 26px;
+      margin-top: 28px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -218,7 +222,7 @@
       letter-spacing: 0.2em;
       text-transform: uppercase;
       text-decoration: none;
-      color: #f8f2ea;
+      color: #f8f8f8;
       padding-bottom: 4px;
     }
 
@@ -229,7 +233,7 @@
       right: 0;
       bottom: 0;
       height: 1px;
-      background: rgba(240, 196, 154, 0.95);
+      background: rgba(242, 155, 122, 0.95);
     }
 
     .hero-link:hover,
@@ -240,7 +244,7 @@
 
     .hero-note {
       font-size: 0.86rem;
-      color: rgba(240, 196, 154, 0.9);
+      color: rgba(242, 155, 122, 0.9);
       max-width: 20rem;
       text-align: center;
     }
@@ -386,7 +390,7 @@
     .site-footer-inner {
       max-width: var(--max-width);
       margin: 0 auto;
-      border-top: 1px solid rgba(40, 28, 20, 0.12);
+      border-top: 1px solid rgba(0, 0, 0, 0.08);
       padding-top: 10px;
     }
 
